2009-02-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	In BitTorrent, Open files in read-only mode for hash check.  After
	that, re-open file in read/write mode only when the download is
	not finished.	
	* src/AbstractDiskWriter.cc
	* src/AbstractDiskWriter.h
	* src/AbstractSingleDiskAdaptor.cc
	* src/AbstractSingleDiskAdaptor.h
	* src/BtCheckIntegrityEntry.cc
	* src/DiskAdaptor.h
	* src/DiskWriter.h
	* src/MultiDiskAdaptor.cc
	* src/MultiDiskAdaptor.h
	* src/RequestGroup.cc

2009-02-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --http-auth-challenge option.  If it is set to true(by
	default), aria2 sends HTTP authorization header only when it is
	requested by the server. If false is set, then authorization
	header is always sent to the server. This is useful for servers
	that don't respond 401 code when authentication is required.
	There is an exception: if username and password are embedded in
	URI, authorization header is always sent to the server regardless
	of this option.
	* src/AuthConfigFactory.cc
	* src/HttpSkipResponseCommand.cc
	* src/OptionHandlerFactory.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* test/AuthConfigFactoryTest.cc
	* test/HttpRequestTest.cc

2009-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	* Release 1.2.0

2009-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Spanish, Ukrainian, Russian and Japanese translations.
	Thanks to all translators.
	* po/es.po
	* po/ja.po
	* po/ru.po
	* po/uk.po
	
2009-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call deleteSocketForReadCheck() before socket is closed.
	* src/HttpListenCommand.cc 

2009-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined virtual destructor for BObject.
	* src/bencode.h

2009-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten BDE to make it efficient.
	* src/bencode.cc
	* src/bencode.h
	